--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -4,7 +4,7 @@
     <% } %>
     <div class="article-meta">
         <% if (post.top){ %>
-        <span class="top"><a href="javascript:">置顶</a></span>
+        <span class="top"><a href="javascript:">トップ</a></span>
         <%}%>
         <% if (theme.author.on==true && post.author) {%>
         <span class="author"><a href="javascript:"><%=post.author %></a></span>
@@ -26,12 +26,12 @@
     </div>
     <div class="article-meta">
         <% if (post.date){ %>
-        创建时间:<time class="date" title='更新时间: <%= date(post.updated, 'YYYY-MM-DD HH:mm:ss')%>'><%= date(post.date, 'YYYY-MM-DD HH:mm') %></time>
+        作成日時:<time class="date" title='更新日時: <%= date(post.updated, 'YYYY-MM-DD HH:mm:ss')%>'><%= date(post.date, 'YYYY-MM-DD HH:mm') %></time>
         <% } %>
     </div>
     <div class="article-meta">
         <%if(theme.word_count){%>
-        <span>字数:<%=wordcount(post.content) %></span>
+        <span>文字数:<%=wordcount(post.content) %></span>
         <%}%>
         <%if(theme.visit_counter && theme.visit_counter.on && theme.visit_counter.page_visit) {%>
         <span id="busuanzi_container_page_pv">
@@ -46,9 +46,9 @@
         </span>
         <%}%>
         <%if(theme.comment.on && theme.comment.type && theme.comment.comment_count){%>
-        <span class="top-comment" title="跳转至评论区">
+        <span class="top-comment" title="コメントページ">
             <a href="#comments">
-                评论:<span class="count-comment">
+                コメント:<span class="count-comment">
                     <span class="spinner">
                       <div class="cube1"></div>
                       <div class="cube2"></div>
@@ -72,7 +72,7 @@
     </div>
     <%}%>
     <%- partial('_partial/toc-ref', {index: false}) %>
-    <% post.content = post.content.replace(/@\[TOC\]/gi, "<div class='inner-toc'><h2>目录</h2>" + toc(post.content, {list_number: false}) + '</div>') %>
+    <% post.content = post.content.replace(/@\[TOC\]/gi, "<div class='inner-toc'><h2>目次</h2>" + toc(post.content, {list_number: false}) + '</div>') %>
     <div class="article-entry" itemprop="articleBody">
       <% if (post.excerpt && index){ %>
         <%- post.excerpt %>
@@ -90,7 +90,7 @@
 
 <% if(theme.reward){%>
 <p>
-    <a href="javascript:void(0)" class="dashang" onclick="dashangToggle()">赏</a>
+    <a href="javascript:void(0)" class="dashang" onclick="dashangToggle()">リワード</a>
 </p>
 <%}%>
 <%- partial('_partial/article_copyright')%>
